@@ -43,7 +43,16 @@ samtools index \- indexes SAM/BAM/CRAM files
 .
 .SH SYNOPSIS
 .PP
-samtools index
+.B samtools index
+.RB [ -bc ]
+.RB [ -m
+.IR INT ]
+.RB [ -o
+.IR out.index ]
+.I FILE
+.RI [ FILE ...]
+.PP
+.B samtools index
 .RB [ -bc ]
 .RB [ -m
 .IR INT ]
@@ -52,7 +61,7 @@ samtools index
 
 .SH DESCRIPTION
 .PP
-Index a coordinate-sorted BGZIP-compressed SAM, BAM or CRAM file for fast
+Index coordinate-sorted BGZIP-compressed SAM, BAM or CRAM files for fast
 random access.
 Note for SAM this only works if the file has been BGZF compressed first.
 
@@ -62,9 +71,18 @@ arguments are used to limit
 .B samtools view
 and similar commands to particular regions of interest.
 
-If an output filename is given, the index file will be written to
-.IR out.index .
-Otherwise, for a CRAM file
+When only one alignment file is being indexed, the output index filename
+can be specified via
+.B -o
+or as shown in the second synopsis.
+(To be precise: when two filename arguments are given, the second filename
+is interpreted as specifying
+.I out.index
+if that file either does not exist or already contains index data.
+Otherwise the command is interpreted as specifying two alignment files
+to be indexed individually.)
+
+When no output filename is specified, for a CRAM file
 .IR aln.cram ,
 index file
 .IB aln.cram .crai
@@ -100,6 +118,11 @@ as the fixed value used by the BAI format.
 .TP
 .BI "-m " INT
 Create a CSI index, with a minimum interval size of 2^INT.
+.TP
+.BI "-o " FILE
+Write the output index to
+.IR FILE .
+(Currently may only be used when exactly one alignment file is being indexed.)
 .TP
 .BI "-@, --threads " INT
 Number of input/output compression threads to use in addition to main thread [0].
